fix: spacing

--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -32,3 +32,9 @@
 .copy:hover {
   filter: brightness(1.1);
 }
+
+@media screen and (max-width: 500px) {
+  .header {
+    padding: 30px 15px;
+  }
+}
