--- a/styles/globals.css
+++ b/styles/globals.css
@@ -121,3 +121,9 @@ hr {
   border: 1px solid transparent;
   border-top: 1px solid var(--color-layer-lighter);
 }
+
+@media screen and (max-width: 500px) {
+  .container {
+    padding: 0 15px;
+  }
+}
